--- a/.github/workflows/sdl.yml
+++ b/.github/workflows/sdl.yml
@@ -107,3 +107,50 @@ jobs:
           name: trivy-report
           path: "./trivy_report*.html"
           retention-days: 30
+
+  antivirus:
+    name: Antivirus
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          lfs: true
+      - name: Get changed files
+        if: ${{ github.event_name == 'pull_request' }}
+        id: changed-files
+        uses: tj-actions/changed-files@ed68ef82c095e0d48ec87eccea555d944a631a4c # v46.0.5
+      - name: Run ClamAV scan
+        id: run-clamav
+        uses: docker://clamav/clamav:stable
+        env:
+          GITHUB_OUTPUT: /tmp/gh_output
+        with:
+          entrypoint: sh
+          args: |
+            -cx "
+            # Update virus definitions
+            freshclam --quiet
+
+            # Run scan based on scope
+            if [ '${{ github.event_name == 'pull_request' }}' = 'true' ] && [ -n '${{ steps.changed-files.outputs.all_changed_files }}' ]; then
+              echo 'Running ClamAV on changed files'
+              FILES='${{ steps.changed-files.outputs.all_changed_files }}'
+              SCAN_CMD='clamscan'
+            else
+              echo 'Running ClamAV on all files in ${{ inputs.paths }}'
+              FILES='${{ inputs.paths }}'
+              SCAN_CMD='clamscan -r'
+            fi
+
+            # Run scan and capture output
+            clamscan -r --exclude='\.git' > clamav_report.txt
+            "
+      - name: Upload Scan Results
+        if: ${{ !cancelled() }}
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 #v4.6.2
+        with:
+          name: clamav-report
+          path: "clamav_report.txt"
+          retention-days: 30
