--- a/.github/workflows/sdl.yml
+++ b/.github/workflows/sdl.yml
@@ -124,8 +124,6 @@ jobs:
       - name: Run ClamAV scan
         id: run-clamav
         uses: docker://clamav/clamav:stable
-        env:
-          GITHUB_OUTPUT: /tmp/gh_output
         with:
           entrypoint: sh
           args: |
@@ -145,10 +143,20 @@ jobs:
             # Run scan and capture output
             clamscan $SCAN_ARGS --exclude='\.git' > clamav_report.txt
             "
+      - name: Print Scan Results
+        if: ${{ !cancelled() }}
+        run: cat clamav_report.txt
+      - name: Rename Report
+        if: ${{ !cancelled() }}
+        shell: bash
+        run: |
+          DATE=$(date +"%Y-%m-%d")
+          REF_NAME="${{ github.ref_name }}"
+          mv "clamav_report.txt" "clamav_report_${DATE}_${REF_NAME//\//-}_${{ github.sha }}.txt"
       - name: Upload Scan Results
         if: ${{ !cancelled() }}
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 #v4.6.2
         with:
           name: clamav-report
-          path: "clamav_report.txt"
+          path: "./clamav_report*.txt"
           retention-days: 30
