--- a/.github/workflows/sdl.yml
+++ b/.github/workflows/sdl.yml
@@ -115,7 +115,7 @@ jobs:
         with:
           lfs: true
       - name: Get changed files
-        if: ${{ github.event_name != 'pull_request' }}
+        if: ${{ github.event_name == 'pull_request' }}
         id: changed-files
         uses: tj-actions/changed-files@ed68ef82c095e0d48ec87eccea555d944a631a4c # v46.0.5
       - name: Run ClamAV scan
@@ -129,7 +129,7 @@ jobs:
             freshclam --quiet
 
             # Run scan based on scope
-            if [ '${{ github.event_name != 'pull_request' }}' = 'true' ] && [ -n '${{ steps.changed-files.outputs.all_changed_files }}' ]; then
+            if [ '${{ github.event_name == 'pull_request' }}' = 'true' ] && [ -n '${{ steps.changed-files.outputs.all_changed_files }}' ]; then
               echo 'Running ClamAV on changed files'
               SCAN_ARGS='${{ steps.changed-files.outputs.all_changed_files }}'
             else
@@ -139,7 +139,6 @@ jobs:
 
             # Run scan and capture output
             clamscan $SCAN_ARGS > clamav_report.txt
-            exit 1
             "
       - name: Print Scan Results
         if: ${{ !cancelled() }}
