--- a/.github/workflows/sdl.yml
+++ b/.github/workflows/sdl.yml
@@ -8,9 +8,6 @@ on:
       - develop
       - release_v*
   pull_request:
-    paths:
-      - '.github/workflows/sdl.yml'
-      - '**.py'
 
 jobs:
   bandit:
@@ -105,4 +102,58 @@ jobs:
         with:
           name: trivy-report
           path: "./trivy_report*.html"
+          retention-days: 30
+
+  antivirus:
+    name: Antivirus
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          lfs: true
+      - name: Get changed files
+        if: ${{ github.event_name == 'pull_request' }}
+        id: changed-files
+        uses: tj-actions/changed-files@ed68ef82c095e0d48ec87eccea555d944a631a4c # v46.0.5
+      - name: Run ClamAV scan
+        id: run-clamav
+        uses: docker://clamav/clamav:stable
+        with:
+          entrypoint: sh
+          args: |
+            -cx "
+            # Update virus definitions
+            freshclam --quiet
+
+            # Run scan based on scope
+            if [ '${{ github.event_name == 'pull_request' }}' = 'true' ] && [ -n '${{ steps.changed-files.outputs.all_changed_files }}' ]; then
+              echo 'Running ClamAV on changed files'
+              SCAN_ARGS='${{ steps.changed-files.outputs.all_changed_files }}'
+            else
+              echo 'Running ClamAV on all files'
+              SCAN_ARGS='-r'
+            fi
+
+            # Run scan and capture output
+            clamscan $SCAN_ARGS > clamav_report.txt
+            "
+      - name: Print Scan Results
+        if: ${{ !cancelled() }}
+        shell: bash
+        run: cat clamav_report.txt
+      - name: Rename Report
+        if: ${{ !cancelled() }}
+        shell: bash
+        run: |
+          DATE=$(date +"%Y-%m-%d")
+          REF_NAME="${{ github.ref_name }}"
+          mv "clamav_report.txt" "clamav_report_${DATE}_${REF_NAME//\//-}_${{ github.sha }}.txt"
+      - name: Upload Scan Results
+        if: ${{ !cancelled() }}
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 #v4.6.2
+        with:
+          name: clamav-report
+          path: "./clamav_report*.txt"
           retention-days: 30
