--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -90,3 +90,22 @@ jobs:
           export PATH=/usr/local/cuda-12.4/bin${PATH:+:${PATH}}
           export LD_LIBRARY_PATH=/usr/local/cuda-12.4/lib64${LD_LIBRARY_PATH:+:${LD_LIBRARY_PATH}}
           pytest tests/cross_fw/install -rA -s --host-configuration gpu --backend torch
+
+  update-pr-description:
+    name: Update PR description
+    runs-on: ubuntu-22.04
+    if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.pull_request_number != '' }}
+    permissions:
+      contents: write
+      pull-requests: write
+      issues: write
+    steps:
+      - uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
+        with:
+          sparse-checkout: .github/actions/add_job_link
+      - name: Update PR preview link
+        uses: ./.github/actions/add_job_link
+        with:
+          pull_request_number: ${{ inputs.pull_request_number }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
