--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -220,5 +220,6 @@ jobs:
         uses: ./.github/actions/add_job_link
         with:
           pull_request_number: ${{ inputs.pull_request_number }}
+          link_name: "Test_Examples"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
