--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -76,5 +76,6 @@ jobs:
         uses: ./.github/actions/add_job_link
         with:
           pull_request_number: ${{ inputs.pull_request_number }}
+          link_name: "Test_MacOS"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
