--- a/tests/post_training/requirements.txt
+++ b/tests/post_training/requirements.txt
@@ -11,7 +11,7 @@ pytest-split
 librosa==0.10.0
 memory-profiler==0.61.0
 optimum-intel==1.22.0
-optimum==1.24.0
+optimum @ git+https://github.com/huggingface/optimum.git@9438b863e11acf25c69d78450f48e78690fce10f
 scikit-learn>=1.2.2,<=1.5.0
 soundfile==0.12.1
 tensorboard==2.13.0
