--- a/examples/post_training_quantization/onnx/mobilenet_v2/requirements.txt
+++ b/examples/post_training_quantization/onnx/mobilenet_v2/requirements.txt
@@ -3,7 +3,6 @@ tqdm
 scikit-learn
 fastdownload
 onnx==1.17.0
-onnxruntime==1.19.2; python_version <= '3.9'
-onnxruntime==1.21.1; python_version > '3.9'
+onnxruntime==1.21.1
 openvino==2025.1
 numpy<2
