--- a/examples/post_training_quantization/onnx/yolov8_quantize_with_accuracy_control/requirements.txt
+++ b/examples/post_training_quantization/onnx/yolov8_quantize_with_accuracy_control/requirements.txt
@@ -1,5 +1,4 @@
 ultralytics==8.3.22
 onnx==1.17.0
-onnxruntime==1.19.2; python_version <= '3.9'
-onnxruntime==1.21.1; python_version > '3.9'
+onnxruntime==1.21.1
 openvino==2025.1
