--- a/examples/llm_compression/fx/tiny_llama/requirements.txt
+++ b/examples/llm_compression/fx/tiny_llama/requirements.txt
@@ -1,5 +1,6 @@
 transformers>=4.48.0
 datasets==2.14.7
 openvino==2025.1
-torch==2.6.0
-torchvision==0.21.0
+optimum==1.24.0
+torch==2.7.0
+torchvision==0.22.0
