move tf tests to nightly scope

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -5,6 +5,7 @@ on:
   workflow_dispatch:
   schedule:
     - cron: '0 0 * * *'
+  pull_request:
 
 jobs:
   install:
@@ -26,7 +27,7 @@ jobs:
   tensorflow:
     runs-on: ubuntu-latest-8-cores
     if: github.repository_owner == 'openvinotoolkit'
-    timeout-minutes: 60
+    timeout-minutes: 100
     defaults:
       run:
         shell: bash
@@ -44,7 +45,7 @@ jobs:
       - name: Print installed modules
         run: pip list
       - name: Run TensorFlow precommit
-        run:  pytest tests/tensorflow -m 'nightly'
+        run: pytest tests/tensorflow -ra
 
   weight-compression:
     if: github.repository_owner == 'openvinotoolkit'
@@ -55,3 +56,4 @@ jobs:
     uses: ./.github/workflows/call_precommit_windows.yml
     with:
       python_version: "3.10"
+
