1) Fixed bug with data-free AWQ and mixed-precision. 2) Added conformance tests for data-free AWQ.

--- a/tests/post_training/data/wc_reference_data.yaml
+++ b/tests/post_training/data/wc_reference_data.yaml
@@ -102,3 +102,11 @@ tinyllama_data_aware_awq_scale_estimation_backend_FX_TORCH:
     type: "TypeError"
     error_message: "'function' object is not iterable"
     message: "Issue-165013"
+tinyllama_data_free_awq_backend_OV:
+  metric_value: 0.85466
+  num_int4: 188
+  num_int8: 124
+tinyllama_data_free_awq_backend_TORCH:
+  metric_value: 0.85466
+  num_int4: 188
+  num_int8: 124
