--- a/tests/post_training/data/wc_reference_data.yaml
+++ b/tests/post_training/data/wc_reference_data.yaml
@@ -102,3 +102,11 @@ tinyllama_data_aware_awq_scale_estimation_backend_FX_TORCH:
     type: "FileNotFoundError"
     error_message: "Openvino Model Files Not Found!"
     message: "Issue-165013"
+tinyllama_data_free_awq_backend_OV:
+  metric_value: 0.85466
+  num_int4: 94
+  num_int8: 124
+tinyllama_data_free_awq_backend_TORCH:
+  metric_value: 0.85466
+  num_int4: 94
+  num_int8: 124
