--- a/tests/post_training/data/wc_reference_data.yaml
+++ b/tests/post_training/data/wc_reference_data.yaml
@@ -2,6 +2,10 @@ tinyllama_data_free_backend_OV:
   metric_value: 0.73873
   num_int4: 114
   num_int8: 84
+tinyllama_data_free_backend_ONNX:
+  metric_value: 0.73779
+  num_int4: 264
+  num_int8: 84
 tinyllama_data_aware_backend_OV:
   metric_value: 0.85767
   num_int4: 94
