--- a/examples/post_training_quantization/torch_fx/resnet18/requirements.txt
+++ b/examples/post_training_quantization/torch_fx/resnet18/requirements.txt
@@ -1,4 +1,5 @@
 fastdownload==0.0.7
-openvino==2025.1
+openvino==2025.2.0.*
+--extra-index-url https://storage.openvinotoolkit.org/simple/wheels/pre-release --pre
 torch==2.7.0
 torchvision==0.22.0
