--- a/examples/quantization_aware_training/torch/resnet18/requirements.txt
+++ b/examples/quantization_aware_training/torch/resnet18/requirements.txt
@@ -1,4 +1,5 @@
 fastdownload==0.0.7
-openvino==2025.1
+openvino==2025.2.0.*
+--extra-index-url https://storage.openvinotoolkit.org/simple/wheels/pre-release --pre
 torch==2.7.1
 torchvision==0.22.1
